--- a/.github/workflows/readme-stats.yml
+++ b/.github/workflows/readme-stats.yml
@@ -16,30 +16,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate GitHub Readme Stats card
-        env:
-          OWNER: ${{ github.repository_owner }}
-        run: |
-          mkdir -p assets
-          stats_url="https://github-readme-stats.vercel.app/api?username=${OWNER}&show_icons=true&hide_border=true&theme=transparent"
-          langs_url="https://github-readme-stats.vercel.app/api/top-langs/?username=${OWNER}&layout=compact&hide_border=true&theme=transparent"
+        uses: readme-tools/github-readme-stats-action@v1
+        with:
+          card: stats
+          options: username=${{ github.repository_owner }}&show_icons=true&hide_border=true&theme=transparent
+          path: assets/github-readme-stats.svg
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-          fetch_svg() {
-            local url="$1"
-            local out="$2"
-            local tmp="${out}.tmp"
-
-            if curl -fSL --retry 5 --retry-delay 3 --retry-all-errors "$url" -o "$tmp"; then
-              mv "$tmp" "$out"
-              return 0
-            fi
-
-            rm -f "$tmp"
-            echo "Warning: failed to fetch $url"
-            return 1
-          }
-
-          fetch_svg "$stats_url" "assets/github-readme-stats.svg" || true
-          fetch_svg "$langs_url" "assets/github-top-langs.svg" || true
+      - name: Generate top languages card
+        uses: readme-tools/github-readme-stats-action@v1
+        with:
+          card: top-langs
+          options: username=${{ github.repository_owner }}&layout=compact&hide_border=true&theme=transparent
+          path: assets/github-top-langs.svg
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit and push if changed
         run: |
