fix: fail workflow when stats svgs are not generated

--- a/.github/workflows/readme-stats.yml
+++ b/.github/workflows/readme-stats.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Ensure output directory exists
+        run: mkdir -p assets
+
       - name: Generate GitHub Readme Stats card
         uses: readme-tools/github-readme-stats-action@v1
         with:
@@ -33,6 +36,11 @@ jobs:
 
       - name: Commit and push if changed
         run: |
+          if [ ! -f assets/github-readme-stats.svg ] || [ ! -f assets/github-top-langs.svg ]; then
+            echo "Expected SVG outputs were not generated."
+            exit 1
+          fi
+
           if git diff --quiet -- assets/github-readme-stats.svg assets/github-top-langs.svg; then
             echo "No changes to commit."
             exit 0
