--- a/.github/workflows/readme-stats.yml
+++ b/.github/workflows/readme-stats.yml
@@ -1,53 +1,51 @@
-name: Update README Stats
+name: Update README cards
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *" # Runs daily at midnight UTC.
+    - cron: "0 0 * * *" # Runs once daily at midnight
+  workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  update-stats:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
       - name: Ensure output directory exists
-        run: mkdir -p assets
+        run: mkdir -p profile
 
-      - name: Generate GitHub Readme Stats card
+      - name: Generate stats card
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: username=${{ github.repository_owner }}&show_icons=true&hide_border=true&theme=transparent
-          path: assets/github-readme-stats.svg
+          options: username=${{ github.repository_owner }}&show_icons=true
+          path: profile/stats.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate top languages card
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: top-langs
-          options: username=${{ github.repository_owner }}&layout=compact&hide_border=true&theme=transparent
-          path: assets/github-top-langs.svg
+          options: username=${{ github.repository_owner }}&layout=compact&langs_count=6
+          path: profile/top-langs.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Commit and push if changed
+      - name: Generate pin card
+        uses: readme-tools/github-readme-stats-action@v1
+        with:
+          card: pin
+          options: username=readme-tools&repo=github-readme-stats
+          path: profile/pin-readme-tools-github-readme-stats.svg
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Commit cards
         run: |
-          if [ ! -f assets/github-readme-stats.svg ] || [ ! -f assets/github-top-langs.svg ]; then
-            echo "Expected SVG outputs were not generated."
-            exit 1
-          fi
-
-          if git diff --quiet -- assets/github-readme-stats.svg assets/github-top-langs.svg; then
-            echo "No changes to commit."
-            exit 0
-          fi
-
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add assets/github-readme-stats.svg assets/github-top-langs.svg
-          git commit -m "chore: update GitHub README stats card"
+          git add profile/*.svg
+          git commit -m "Update README cards" || exit 0
           git push
